// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu matches the snapshot (menu with groups) 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #878f9a;
  border-radius: var(--border-radius);
  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  max-height: calc(var(--spacing-half) + 128px);
  overflow-x: hidden;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  gap: var(--spacing-1x);
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c2:focus {
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
  outline: none;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c1 {
  color: #60666e;
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  overflow: hidden;
  padding: var(--spacing-base) var(--spacing-2x) var(--spacing-half);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0"
  data-testid="menu"
  role="menu"
>
  <div
    aria-labelledby="menu-group-0"
    role="group"
  >
    <span
      class="c1"
      id="menu-group-0"
    >
      Group 1
    </span>
    <button
      class="c2"
      data-testid="sub-menu-option-0"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      <span
        class="c3"
      >
        Option 1.1
      </span>
    </button>
    <button
      class="c2"
      data-testid="sub-menu-option-1"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      <span
        class="c3"
      >
        Option 1.2
      </span>
    </button>
  </div>
  <div
    aria-labelledby="menu-group-1"
    role="group"
  >
    <span
      class="c1"
      id="menu-group-1"
    >
      Group 2
    </span>
    <button
      class="c2"
      data-testid="sub-menu-option-0"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      <span
        class="c3"
      >
        Option 2.1
      </span>
    </button>
    <button
      class="c2"
      data-testid="sub-menu-option-1"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      <span
        class="c3"
      >
        Option 2.2
      </span>
    </button>
  </div>
</div>
`;

exports[`Menu matches the snapshot (menu with icons) 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #878f9a;
  border-radius: var(--border-radius);
  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  max-height: calc(var(--spacing-half) + 128px);
  overflow-x: hidden;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  gap: var(--spacing-1x);
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c1:focus {
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
  outline: none;
}

.c1:hover {
  background-color: #DBDEE1;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  width: 16px;
}

<div
  class="c0"
  data-testid="menu"
  role="menu"
>
  <button
    class="c1"
    data-testid="menu-option-0"
    role="menuitem"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c2"
      color="#60666E"
      focusable="false"
      height="16"
      width="16"
    />
    <span
      class="c3"
    >
      Option 1
    </span>
  </button>
  <button
    class="c1"
    data-testid="menu-option-1"
    role="menuitem"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c2"
      color="#60666E"
      focusable="false"
      height="16"
      width="16"
    />
    <span
      class="c3"
    >
      Option 2
    </span>
  </button>
</div>
`;
